--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "adroit"
-version = "0.1"
+version = "0.2"
 description = "Ansible Docker Role Testing"
 authors = ["Andreas Lutro <anlutro@gmail.com>"]
 readme = "README.md"
@@ -12,6 +12,7 @@ python = "^3.5"
 [tool.poetry.dev-dependencies]
 ansible = "*"
 pytest = "*"
+pylint = "*"
 
 [tool.poetry.scripts]
 adroit = 'adroit.cli:main'
