--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ jobs:
       language: python
       python: 3.6
       install: pip install black
-      script: black --check adroit
+      script: black --check adroit tests
 
     - &code-test
       name: py3.6 - lint + tests
