--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.3"
 description = "Ansible Docker Role Testing"
 authors = ["Andreas Lutro <anlutro@gmail.com>"]
 readme = "README.md"
-license = "MIT"
+license = "GPLv3"
 
 [tool.poetry.dependencies]
 python = "^3.5"
