--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,8 @@ jobs:
       script: black --check adroit tests
 
     - &code-test
-      name: py3.6 - lint + tests
-      python: 3.6
+      name: py3.5 - lint + tests
+      python: 3.5
       language: python
       install:
         - pip install poetry
@@ -24,8 +24,12 @@ jobs:
         - pylint adroit
         - pytest
     - <<: *code-test
-      name: py3.5 - lint + tests
-      python: 3.5
+      name: py3.6 - lint + tests
+      python: 3.6
+    - <<: *code-test
+      name: py3.7 - lint + tests
+      python: 3.7
+      dist: xenial
 
     - name: example
       language: python
