--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,10 @@
-# python
-__pycache__
-*.pyc
-/pip-selfcheck.json
 *.egg-info
+*.pyc
 .eggs
-/dist
-/pyproject.lock
-
-# pytest
 /.pytest_cache
-/.cache
-/.coverage
-
-# virtualenv
 /.venv
-/.virtualenv
-/include
-/lib
-/lib64
-/share
+/dist
+/pip-selfcheck.json
+/pyproject.lock
+__pycache__
+poetry.lock
