--- a/.travis.yml
+++ b/.travis.yml
@@ -37,5 +37,5 @@ jobs:
       services: [ docker ]
       install:
         - pip install poetry
-        - poetry develop
+        - poetry install
       script: ./example/run.sh
